--- a/Travelwings/test-output/old/Default suite/methods.html
+++ b/Travelwings/test-output/old/Default suite/methods.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7d6578">  <td>19/05/08 18:26:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flights.flight()[pri:0, instance:framework.Flights@55f3ddb1]">flight</td> 
-  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/05/09 19:20:11</td>   <td>0</td> <td title="&gt;&gt;Flights.setupsuite()[pri:0, instance:framework.Flights@26be92ad]">&gt;&gt;setupsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@333362446</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/05/09 19:20:11</td>   <td>155</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Flights.bc()[pri:0, instance:framework.Flights@26be92ad]">&gt;&gt;bc</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@333362446</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/05/09 19:20:12</td>   <td>1159</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flights.flight()[pri:0, instance:framework.Flights@26be92ad]">flight</td> 
+  <td>main@333362446</td>   <td></td> </tr>
+<tr bgcolor="a485d2">  <td>19/05/09 19:20:42</td>   <td>31354</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Flights.teardown(org.testng.ITestResult)[pri:0, instance:framework.Flights@26be92ad]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@333362446</td>   <td></td> </tr>
 </table>
