--- a/Travelwings/test-output/old/Default suite/methods.html
+++ b/Travelwings/test-output/old/Default suite/methods.html
@@ -1,12 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="74b285">  <td>19/05/14 13:04:33</td>   <td>0</td> <td title="&gt;&gt;Flights.setupsuite()[pri:0, instance:framework.Flights@5b275dab]">&gt;&gt;setupsuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/05/14 13:04:34</td>   <td>149</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Flights.bc()[pri:0, instance:framework.Flights@5b275dab]">&gt;&gt;bc</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/05/14 13:04:34</td>   <td>776</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Flights.flight()[pri:0, instance:framework.Flights@5b275dab]">flight</td> 
-  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="74b285">  <td>19/05/14 13:04:38</td>   <td>4643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Flights.teardown(org.testng.ITestResult)[pri:0, instance:framework.Flights@5b275dab]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="fb9ab6">  <td>19/05/31 03:16:35</td>   <td>0</td> <td title="&gt;&gt;Flights.setupsuite()[pri:0, instance:framework.Flights@4c70fda8]">&gt;&gt;setupsuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
+<tr bgcolor="fb9ab6">  <td>19/05/31 03:16:36</td>   <td>248</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Flights.bc()[pri:0, instance:framework.Flights@4c70fda8]">&gt;&gt;bc</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@597255128</td>   <td></td> </tr>
 </table>
