--- a/Travelwings/Reports/sonu.html
+++ b/Travelwings/Reports/sonu.html
@@ -43,7 +43,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>May 14, 2019 06:06:35 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Aug 21, 2019 04:21:33 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -58,7 +58,7 @@
 				<i class='material-icons'>warning</i> Status
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
-										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
+										<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -101,10 +101,10 @@
 					<canvas id='parent-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
+					<span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> test(s) passed</span>
 				</div>
 				<div class='block text-small'>
-					<span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
+					<span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
 				</div>
 			</div>
 		</div>
@@ -122,17 +122,17 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
+				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>Flight booking</span>
-						<span class='test-time'>May 14, 2019 06:06:37 PM</span>
-						<span class='test-status right pass'>pass</span>
+						<span class='test-time'>Aug 21, 2019 04:21:40 PM</span>
+						<span class='test-status right fail'>fail</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 14, 2019 06:06:37 PM</span>
-	<span class='label end-time'>May 14, 2019 06:06:52 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 15s+1ms</span>
+	<span class='label start-time'>Aug 21, 2019 04:21:40 PM</span>
+	<span class='label end-time'>Aug 21, 2019 04:22:38 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 58s+337ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -146,17 +146,17 @@
 		<tbody>
 			<tr class='log' status='info'>
 				<td class='status info' title='info' alt='info'><i class='material-icons'>info_outline</i></td>
-				<td class='timestamp'>6:06:37 PM</td>
+				<td class='timestamp'>4:21:40 PM</td>
 				<td class='step-details'>
 						starting application
 					
 				</td>
 			</tr>
-			<tr class='log' status='pass'>
-				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>6:06:52 PM</td>
+			<tr class='log' status='fail'>
+				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
+				<td class='timestamp'>4:22:38 PM</td>
 				<td class='step-details'>
-						Test pass
+						Test fail
 					<img class='r-img' onerror='this.style.display="none"' data-featherlight='/home/ttuser/git/Techtree/Travelwings/Screenshots/sonu.png' src='/home/ttuser/git/Techtree/Travelwings/Screenshots/sonu.png' data-src='/home/ttuser/git/Techtree/Travelwings/Screenshots/sonu.png'>
 				</td>
 			</tr>
@@ -206,13 +206,13 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>May 14, 2019 06:06:35 PM</div>
+					<div class='panel-lead'>Aug 21, 2019 04:21:33 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>May 14, 2019 06:06:35 PM</div>
+			 		<div class='panel-lead'>Aug 21, 2019 04:21:33 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -229,13 +229,13 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-				passParent: 1,
-				failParent: 0,
+				passParent: 0,
+				failParent: 1,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 0,
+				exceptionsParent: 1,
 				
 				passChild: 0,
 				failChild: 0,
@@ -260,7 +260,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "Flight booking":15.001
+			        "Flight booking":58.337
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/master/v3html/js/extent.js' type='text/javascript'></script>
